# git-sync-reloader-adapter

./: Cargo.toml  Dockerfile
.github/workflows/: docker.yml
src/: main.rs
