[package]
name = "git-sync-reloader-adapter"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
kube = { version = "0.87", features = ["runtime", "client"] }
k8s-openapi = { version = "0.20", features = ["v1_28"] }
serde_json = "1.0"
clap = { version = "4.5.42", features = ["derive"] }
anyhow = "1.0.98"
